test/source/errors/forever-no-indent.hc
// This file contains a forever loop where the body has no indent.
// This should throw an error in the phase 2 parser.

forever
output input
